# george-analysis

./: README.md  docker-compose.yml  dotenv-example
config/: dereference_sparqlendpoint.yml  sembench.json
data/: project.ttl
data/json_api_data/: Datastreams.csv  Locations.csv  Sensors.csv  Things.csv
docker/: jupyter_url.sh
docker/lwua-dereferencer/: Dockerfile
docker/lwua-dereferencer/dereferencer-py/: debug-logconf.yml  pyproject.toml
docker/lwua-dereferencer/dereferencer-py/dereferencer/: __init__.py  __main__.py  dereference.py  schedule.py
docker/lwua-dereferencer/dereferencer-py/dereferencer/templates/: deref_property_path.sparql
notebooks/: 00-exploration-Copy1.ipynb  01-ARGO-SensorThingsAPI-Copy1.ipynb  5StarOpenData.ipynb  ARGO-ERDDAP.ipynb  ARGO-FileServer.ipynb  ARGO-OGCSensorThingsAPI.ipynb  ARGO-S3Bucket.ipynb  ARGO-SPARQL-endpoint.ipynb  ARGO-http-server.ipynb  ARGO-jsonAPIs.ipynb  EMSO-ERIC-ERDDAPserver.ipynb  ICOS-CarbonPortal.ipynb  ICOS-SPARQL-endpoint.ipynb  ODIScompliance.ipynb  accessibility.py  connec_functions.py  report.ipynb  requirements.txt  summarize.py
notebooks/ARGO_httpserver_files/: argo_bio-traj_index.txt
notebooks/properties/: ARGO_ERDDAP_dataset_attributes.csv  ARGO_ERDDAP_dataset_data.csv  ARGO_ERDDAP_dataset_dimensions.csv  ARGO_ERDDAP_dataset_metadata.csv  ARGO_ERDDAP_dataset_metadata_attributes.csv  ARGO_ERDDAP_dataset_metadata_dimensions.csv  ARGO_ERDDAP_dataset_metadata_variables.csv  ARGO_ERDDAP_dataset_variables.csv  ARGO_ERDDAP_overview_metadata.csv  ARGO_JSONAPI_metadata_basins.csv  (+19 more)
(+22 files in other folders)
