[tool.poetry]
name = "dereferencer"
version = "0.1.0"
description = "Dereferencing tool that will add triples to a knowledge graph given a config containing a SPARQL query and a list of property paths are given."
authors = ["cedricdcc <30471340+cedricdcc@users.noreply.github.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
pytravharv = {git = "https://github.com/vliz-be-opsci/py-trav-harv.git", rev = "dev"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
